# OCR-PROJECT-RED

./: .gitignore  README.md  advanced_perception.py  config.py  detection.py  download_east_model.py  generate_modules_pdf.py  gestures.py  gui_app.py  main.py  ocr_recognize.py  ocr_vision.spec  preprocess.py  pyproject.toml  requirements.txt  vision_mediapipe.py
