[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-vision"
version = "0.1.0"
description = "OCR vision pipeline with desktop GUI (PySide6) and OpenCV"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "PySide6>=6.6.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[project.scripts]
ocr-vision-gui = "gui_app:main"
ocr-vision = "main:main"

[tool.setuptools]
py-modules = [
    "advanced_perception",
    "config",
    "detection",
    "download_east_model",
    "generate_modules_pdf",
    "gestures",
    "gui_app",
    "main",
    "ocr_recognize",
    "preprocess",
    "vision_mediapipe",
]
